opam-version: "2.0"
version:"0.4.1"
maintainer:   ["julien@adlink-labs.tech"]
authors:      ["Julien Enoch"]
homepage:     "https://github.com/atolab"
bug-reports:  "https://github.com/atolab/apero-time/issues/"
dev-repo:     "git://github.com/atolab/apero-time.git"

license: "Apache-2.0"

build: [
 ["dune" "build" "--only" "apero-time" "--root" "." "-j" jobs "@install"]
]

depends: [
  "dune"
  "fmt"
  "logs"
  "lwt"
  "ppx_deriving"
  "lwt_ppx"
  "apero-core" {>= "0.4.1"}
]